Fixed overflow-x
Turned .floating-title 100vw into 100 percent

--- a/views/assets/theme/sass/style.sass
+++ b/views/assets/theme/sass/style.sass
@@ -215,7 +215,7 @@ section
   border-bottom: 3px solid $detail
   &.floating-title
     position: absolute
-    width: 100vw
+    width: 100%
   h2, h3, h4, h5, h6
     margin: 0 auto
     text-align: center
